# unified-project-tool

./: LICENSE  README.md  template.bootstrap-args  unified-project-tool
projects/: cmake-c.bootstrap-args  cmake-cpp.bootstrap-args
projects/cmake-c/: CMakeLists.txt
projects/cmake-cpp/: CMakeLists.txt
